//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Order {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderId String [unique, not null]
  email String [not null]
  packages Package [not null]
}

Table Package {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  carrier Carrier [not null]
  state PackageState [not null]
  trackingId String [unique, not null]
  carrierTrackingUrl String [unique, not null]
  order Order [not null]
  orderId String [not null]
  events PackageEvent [not null]
}

Table PackageEvent {
  id String [pk]
  time DateTime [not null]
  state PackageState [not null]
  message String [not null]
  package Package [not null]
  packageId String [not null]
  location String [not null]
  sentEmail TransactionalEmail
}

Table TransactionalEmail {
  id String [pk]
  time DateTime [not null]
  email String [not null]
  packageEvent PackageEvent [not null]
  packageEventId String [unique, not null]
}

Table TrackingEmailApp {
  id String [pk]
  tenant Tenant [not null]
  tenantId String [unique, not null]
  SendgridTemplate SendgridTemplate [not null]
  sender String [not null]
  replyTo String [not null]
  integration TrackingIntegration [not null]
}

Table SendgridTemplate {
  id String [pk]
  name String [not null]
  subject String [not null]
  templateId String [not null]
  trackingEmailApp TrackingEmailApp [not null]
  trackingEmailAppId String [not null]

  indexes {
    (trackingEmailAppId, name) [unique]
  }
}

Table DpdApp {
  id String [pk]
  name String
  tenant Tenant [not null]
  tenantId String [unique, not null]
  integration TrackingIntegration
  webhooks IncomingDPDWebhook [not null]
}

Table ProductDataFeedApp {
  id String [pk]
  productDetailStorefrontURL String [not null]
  saleorApp SaleorApp [not null]
  saleorAppId String [not null]
  tenant Tenant [not null]
  tenantId String [unique, not null]
  webhooks IncomingProductDataFeedWebhook [not null]
  integration ProductDataFeedIntegration
}

Table LogisticsApp {
  id String [pk]
  currentOrdersCustomViewId String [not null]
  nextFiveDaysOrdersCustomViewId String [not null]
  currentBulkOrdersCustomViewId String [not null]
  nextFiveDaysBulkOrdersCustomViewId String [not null]
  tenant Tenant [not null]
  tenantId String [unique, not null]
  webhooks IncomingLogisticsWebhook [not null]
  integration LogisticsIntegration
}

Table ZohoApp {
  id String [pk]
  orgId String [not null]
  clientId String [not null]
  clientSecret String [not null]
  tenant Tenant [not null]
  tenantId String [unique, not null]
  strapiToZohoIntegration StrapiToZohoIntegration [not null]
  logisticsIntegration LogisticsIntegration [not null]
}

Table SaleorApp {
  id String [pk]
  domain String [not null]
  name String [not null]
  channelSlug String
  installedSaleorApp InstalledSaleorApp
  tenant Tenant [not null]
  tenantId String [not null]
  productDataFeedIntegration ProductDataFeedIntegration [not null]
  productDataFeedApp ProductDataFeedApp [not null]

  indexes {
    (domain, channelSlug) [unique]
  }
}

Table InstalledSaleorApp {
  id String [pk]
  webhooks IncomingSaleorWebhook [not null]
  token String [not null]
  saleorApp SaleorApp [not null]
  saleorAppId String [unique, not null]
}

Table Tenant {
  id String [pk]
  name String [not null]
  subscriptions Subscription [not null]
  saleorApps SaleorApp [not null]
  zohoApps ZohoApp [not null]
  productdatafeedApps ProductDataFeedApp [not null]
  strapiApps StrapiApp [not null]
  productDataFeedIntegration ProductDataFeedIntegration [not null]
  strapiToZohoIntegration StrapiToZohoIntegration [not null]
  logisticsIntegration LogisticsIntegration [not null]
  logisticsApp LogisticsApp [not null]
  trackingEmailApp TrackingEmailApp [not null]
  dpdApp DpdApp [not null]
  trackingIntegration TrackingIntegration [not null]
}

Table Subscription {
  id String [pk]
  tenant Tenant [not null]
  tenantId String [not null]
  payedUntil DateTime
  productDataFeedIntegration ProductDataFeedIntegration
  strapiToZohoIntegration StrapiToZohoIntegration
  logisticsIntegration LogisticsIntegration
  trackingIntegration TrackingIntegration
}

Table TrackingIntegration {
  id String [pk]
  enabled Boolean [not null, default: true]
  subscription Subscription
  subscriptionId String [unique]
  tenant Tenant [not null]
  tenantId String [not null]
  dpdApp DpdApp [not null]
  dpdAppId String [unique, not null]
  trackingEmailApp TrackingEmailApp [not null]
  trackingEmailAppId String [not null]
}

Table ProductDataFeedIntegration {
  id String [pk]
  enabled Boolean [not null, default: true]
  subscription Subscription
  subscriptionId String [unique]
  tenant Tenant [not null]
  tenantId String [not null]
  productDataFeedApp ProductDataFeedApp [not null]
  productDataFeedAppId String [unique, not null]
  saleorApp SaleorApp [not null]
  saleorAppId String [not null]
}

Table LogisticsIntegration {
  id String [pk]
  enabled Boolean [not null, default: true]
  subscription Subscription
  subscriptionId String [unique]
  tenant Tenant [not null]
  tenantId String [not null]
  zohoApp ZohoApp [not null]
  zohoAppId String [not null]
  logisticsApp LogisticsApp [not null]
  logisticsAppId String [unique, not null]
}

Table StrapiToZohoIntegration {
  id String [pk]
  payedUntil DateTime
  enabled Boolean [not null, default: true]
  strapiContentType String [not null, default: 'bulkorder']
  subscription Subscription
  subscriptionId String [unique]
  tenant Tenant [not null]
  tenantId String [not null]
  strapiApp StrapiApp [not null]
  strapiAppId String [unique, not null]
  zohoApp ZohoApp [not null]
  zohoAppId String [not null]
}

Table StrapiApp {
  id String [pk]
  name String [not null]
  webhooks IncomingStrapiWebhook [not null]
  tenant Tenant [not null]
  tenantId String [not null]
  integration StrapiToZohoIntegration
}

Table IncomingDPDWebhook {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  dpdApp DpdApp [not null]
  dpdAppId String [not null]
}

Table IncomingSaleorWebhook {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  secret SecretKey [not null]
  secretId String [unique, not null]
  installedSaleorApp InstalledSaleorApp [not null]
  installedSaleorAppId String [not null]
}

Table IncomingStrapiWebhook {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  secret SecretKey [not null]
  secretId String [unique, not null]
  strapiApp StrapiApp [not null]
  strapiAppId String [not null]
}

Table IncomingProductDataFeedWebhook {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  productDataFeedApp ProductDataFeedApp [not null]
  productDataFeedAppId String [not null]
}

Table IncomingLogisticsWebhook {
  id String [pk]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  logisticsApp LogisticsApp [not null]
  logisticsAppId String [not null]
}

Table SecretKey {
  id String [pk]
  name String
  secret String [not null]
  createdAt DateTime [default: `now()`, not null]
  incomingSaleorWebhook IncomingSaleorWebhook
  IncomingStrapiWebhook IncomingStrapiWebhook
}

Enum PackageState {
  INIT
  INFORMATION_RECEIVED
  IN_TRANSIT
  OUT_FOR_DELIVERY
  FAILED_ATTEMPT
  DELIVERED
  AVAILABLE_FOR_PICKUP
  EXCEPTION
  EXPIRED
  PENDING
}

Enum Carrier {
  DPD
}

Ref: Package.orderId > Order.orderId

Ref: PackageEvent.packageId > Package.id

Ref: TransactionalEmail.packageEventId - PackageEvent.id

Ref: TrackingEmailApp.tenantId > Tenant.id

Ref: SendgridTemplate.trackingEmailAppId > TrackingEmailApp.id

Ref: DpdApp.tenantId > Tenant.id

Ref: ProductDataFeedApp.saleorAppId > SaleorApp.id

Ref: ProductDataFeedApp.tenantId > Tenant.id

Ref: LogisticsApp.tenantId > Tenant.id

Ref: ZohoApp.tenantId > Tenant.id

Ref: SaleorApp.tenantId > Tenant.id

Ref: InstalledSaleorApp.saleorAppId - SaleorApp.id

Ref: Subscription.tenantId > Tenant.id

Ref: TrackingIntegration.subscriptionId - Subscription.id

Ref: TrackingIntegration.tenantId > Tenant.id

Ref: TrackingIntegration.dpdAppId - DpdApp.id

Ref: TrackingIntegration.trackingEmailAppId > TrackingEmailApp.id

Ref: ProductDataFeedIntegration.subscriptionId - Subscription.id

Ref: ProductDataFeedIntegration.tenantId > Tenant.id

Ref: ProductDataFeedIntegration.productDataFeedAppId - ProductDataFeedApp.id

Ref: ProductDataFeedIntegration.saleorAppId > SaleorApp.id

Ref: LogisticsIntegration.subscriptionId - Subscription.id

Ref: LogisticsIntegration.tenantId > Tenant.id

Ref: LogisticsIntegration.zohoAppId > ZohoApp.id

Ref: LogisticsIntegration.logisticsAppId - LogisticsApp.id

Ref: StrapiToZohoIntegration.subscriptionId - Subscription.id

Ref: StrapiToZohoIntegration.tenantId > Tenant.id

Ref: StrapiToZohoIntegration.strapiAppId - StrapiApp.id

Ref: StrapiToZohoIntegration.zohoAppId > ZohoApp.id

Ref: StrapiApp.tenantId > Tenant.id

Ref: IncomingDPDWebhook.dpdAppId > DpdApp.id

Ref: IncomingSaleorWebhook.secretId - SecretKey.id

Ref: IncomingSaleorWebhook.installedSaleorAppId > InstalledSaleorApp.id

Ref: IncomingStrapiWebhook.secretId - SecretKey.id

Ref: IncomingStrapiWebhook.strapiAppId > StrapiApp.id

Ref: IncomingProductDataFeedWebhook.productDataFeedAppId > ProductDataFeedApp.id

Ref: IncomingLogisticsWebhook.logisticsAppId > LogisticsApp.id